--- a/src/components/SelectionPage/Selection/Filter/Filter.module.css
+++ b/src/components/SelectionPage/Selection/Filter/Filter.module.css
@@ -14,13 +14,11 @@
     flex-flow: column;
     justify-content: center;
     cursor: pointer;
+    transition: 0.2s;
 }
 
 .filterBar div:hover,
-.filterBar div:active {
-    background: pink;
-}
-
+.filterBar div:active,
 .active {
     background: pink;
 }
