--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,12 @@
 .navbar {
-    height: 100px;
+    height: 50px;
     width: 100vw;
+    position: fixed;
     align-items: center;
     padding-top: 30px;
-    background: rgb(247, 247, 247);
     display: flex;
     flex-flow: column;
+    z-index: 100;
 }
 
 .title {
@@ -17,10 +18,8 @@
 
 .navitems a {
     text-decoration: none;
-    color: rgb(36, 36, 36);
+    color: white;
     margin: 10px;
-    font-weight: 700;
-    font-size: 0.8em;
     transition: 0.2s;
 }
 
