--- a/src/components/Pages/MainPage/components/Selection/Selection.module.css
+++ b/src/components/Pages/MainPage/components/Selection/Selection.module.css
@@ -4,7 +4,7 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 150px;
+    padding-bottom: 150px;
 }
 
 .allthumbnails {
