--- a/src/components/Pages/GamePage/GamePage.module.css
+++ b/src/components/Pages/GamePage/GamePage.module.css
@@ -1,8 +1,8 @@
 .GamePage {
-    margin: 0 auto;
-    padding: 100px 0;
+    margin: 0;
+    padding: 61px 0;
     box-sizing: border-box;
-    width: 900px;
+    width: 100%;
     min-height: calc(100vh - 200px - 130px);
 }
 
