--- a/src/components/Pages/GamePage/components/BigImage/BigImage.module.css
+++ b/src/components/Pages/GamePage/components/BigImage/BigImage.module.css
@@ -1,5 +1,13 @@
+.container {
+  min-height: 500px;
+  background-color: lightgray;
+  margin-top: 30px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .image {
   width: 100%;
-  background-color: grey;
-  margin-top: 30px;
 }
