--- a/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
+++ b/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
@@ -11,6 +11,12 @@
   height: 140px;
   margin: 10px;
   background: lightgray;
+  background-position: center;
   background-size: cover;
   cursor: pointer;
+}
+
+.mobileThumbnail {
+  width: 140px;
+  height: 90px;
 }
