--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,6 +2,7 @@
     height: 50px;
     width: 100vw;
     position: fixed;
+    top: 0;
     align-items: center;
     justify-content: center;
     display: flex;
