--- a/src/components/Pages/MainPage/components/Selection/Thumbnail/Thumbnail.module.css
+++ b/src/components/Pages/MainPage/components/Selection/Thumbnail/Thumbnail.module.css
@@ -7,6 +7,11 @@
     background: lightgrey;
 }
 
+.thumbnailMobile {
+    width: 360px;
+    height: 240px;
+}
+
 .overlay,
 .image {
     width: 100%;
