--- a/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
+++ b/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
@@ -2,13 +2,11 @@
   min-height: 150px;
   margin-top: 30px;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
 }
 
 .thumbnail {
-  width: 260px;
-  height: 140px;
+  flex-grow: 1;
   margin: 10px;
   background: lightgray;
   background-position: center;
