various bug fixes

--- a/src/components/Pages/GamePage/components/BigImage/BigImage.module.css
+++ b/src/components/Pages/GamePage/components/BigImage/BigImage.module.css
@@ -1,6 +1,6 @@
 .container {
-  min-height: 500px;
-  background-color: lightgray;
+  min-height: 150px;
+  background-color: white;
   margin-top: 30px;
   display: flex;
   flex-flow: column;
