--- a/src/components/Pages/MainPage/components/IconBoxes/IconBoxes.module.css
+++ b/src/components/Pages/MainPage/components/IconBoxes/IconBoxes.module.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   width: 100%;
   justify-content: center;
-  margin-top: 50px;
+  margin-bottom: 110px;
 }
 
 .iconBox {
@@ -12,13 +12,5 @@
   width: 260px;
   align-items: center;
   text-align: center;
-  margin: 20px;
-}
-
-.icon {
-  height: 100px;
-  width: 100px;
-  margin-bottom: 10px;
-  border-radius: 50%;
-  border: 3px solid burlywood;
+  margin: 0 20px 20px;
 }
