--- a/src/components/Pages/MainPage/components/InstagramFeed/InstagramFeed.module.css
+++ b/src/components/Pages/MainPage/components/InstagramFeed/InstagramFeed.module.css
@@ -2,8 +2,16 @@
   width: 100%;
   min-height: 100px;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  margin-bottom: 250px;
+}
+
+.scrollContainer {
+  display: flex;
+  height: 100%;
+  max-width: 800px;
+  overflow-x: scroll;
 }
 
 .thumbContainer {
@@ -13,7 +21,6 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .instaThumbnail {
@@ -29,14 +36,27 @@
   transform: scale(1.2);
 }
 
-.thumbContainer span {
-  transition: all .15s linear;
-  position: absolute;
-  opacity: 0;
-  color: white;
-  text-shadow: #000 0 0 5px;
+.button {
+    border-radius: 50%;
+    margin-left: -30px;
+    margin-right: -30px;
+    z-index: 5;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    background-color: rgba(0,0,0,0.3);
 }
 
-.thumbContainer:hover span {
-  opacity: 1;
+.seeMore {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.scrollContainer a {
+  text-decoration: none;
+  color: rgb(93, 199, 153);
 }
