--- a/src/components/Pages/MainPage/components/Title/Title.module.css
+++ b/src/components/Pages/MainPage/components/Title/Title.module.css
@@ -10,6 +10,11 @@
   font-size: 1.4em;
 }
 
+.text a {
+  text-decoration: none;
+  color: rgb(93, 199, 153);
+}
+
 .divider {
   width: 400px;
   height: 2px;
