--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,10 @@
 .Footer {
     width: 100%;
     height: 200px;
-    background: #323232;
+    background: #000000;
     box-sizing: border-box;
     padding: 50px;
+    text-align: center;
     color: white;
 }
 .Footer p {
