--- a/src/components/Pages/MainPage/components/Title/Title.module.css
+++ b/src/components/Pages/MainPage/components/Title/Title.module.css
@@ -15,13 +15,17 @@
   color: rgb(93, 199, 153);
 }
 
+.subText {
+  margin-top: 20px;
+  text-align: center;
+}
+
 .divider {
   width: 400px;
   height: 2px;
   margin: 20px 0;
   background-color: black;
 }
-
 
 .dividerMobile {
   width: 300px;
