--- a/src/components/Pages/MainPage/components/Header/ParalaxHeader/ParalaxHeader.module.css
+++ b/src/components/Pages/MainPage/components/Header/ParalaxHeader/ParalaxHeader.module.css
@@ -6,3 +6,25 @@
     background-size: cover;
     background-position: center;
 }
+
+.spinning {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-size: cover;
+    background-position: center;
+
+    animation-name: spin;
+    animation-duration: 80000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    } to {
+        transform: rotate(360deg);
+    }
+}
