--- a/src/components/Pages/MainPage/components/Header/Header.module.css
+++ b/src/components/Pages/MainPage/components/Header/Header.module.css
@@ -57,9 +57,22 @@
 }
 
 .scrollButton {
-    border: 2px solid white;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     cursor: pointer;
+    animation: bounce 4s infinite;
+}
+
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
 }
