--- a/src/components/Pages/MainPage/components/InstagramFeed/InstagramFeed.module.css
+++ b/src/components/Pages/MainPage/components/InstagramFeed/InstagramFeed.module.css
@@ -10,14 +10,14 @@
 .scrollContainer {
   display: flex;
   height: 100%;
-  max-width: 800px;
+  max-width: 1264px;
   overflow-x: scroll;
 }
 
 .thumbContainer {
-  width: 150px;
-  height: 150px;
-  margin: 15px;
+  width: 250px;
+  height: 250px;
+  margin-right: 30px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -36,15 +36,20 @@
   transform: scale(1.2);
 }
 
-.button {
-    border-radius: 50%;
-    margin-left: -30px;
-    margin-right: -30px;
-    z-index: 5;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    background-color: rgba(0,0,0,0.3);
+.buttonLeft, .buttonRight {
+  margin-left: -30px;
+  margin-right: -30px;
+  z-index: 5;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.buttonLeft {
+  background-image: url('./assets/left.png');
+}
+.buttonRight {
+  background-image: url('./assets/right.png');
 }
 
 .seeMore {
