--- a/src/components/Pages/MainPage/components/Selection/Filter/Filter.module.css
+++ b/src/components/Pages/MainPage/components/Selection/Filter/Filter.module.css
@@ -1,14 +1,15 @@
 .filterBar {
     display: flex;
-    justify-content: center;
-    height: 50px;
+    justify-content: space-between;
+    height: 30px;
     width: 450px;
     margin-bottom: 30px;
+    color: #73d9fa;
 }
 
 .filterBar div {
-    width: 30%;
-    border: 1px solid black;
+    width: 140px;
+    border: 2px solid #73d9fa;
     text-align: center;
     display: flex;
     flex-flow: column;
@@ -17,18 +18,10 @@
     transition: 0.2s;
 }
 
-.filterBar div:nth-child(1) {border-radius: 4px 0 0 4px;}
-.filterBar div:nth-child(2) {
-    border-radius: 0;
-    border-left: none;
-    border-right: none;
-}
-.filterBar div:nth-child(3) {border-radius: 0 4px 4px 0;}
-
 .filterBar div:hover,
 .filterBar div:active,
 .active {
-    background: rgb(228, 228, 228);
-    color: rgb(93, 199, 153);
+    color: white;
+    background-color: #73d9fa;
     font-weight: 700;
 }
