--- a/src/components/Pages/MainPage/components/Selection/Filter/Filter.module.css
+++ b/src/components/Pages/MainPage/components/Selection/Filter/Filter.module.css
@@ -1,14 +1,15 @@
 .filterBar {
     display: flex;
     justify-content: space-between;
-    height: 30px;
-    width: 450px;
+    height: 45px;
+    width: 625px;
     margin-bottom: 30px;
     color: #73d9fa;
+    font-size: 1.4em;
 }
 
 .filterBar div {
-    width: 140px;
+    width: 200px;
     border: 2px solid #73d9fa;
     text-align: center;
     display: flex;
