--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .Footer {
     width: 100%;
     height: 200px;
-    background: #73d9fa;
+    background: #5ec9f1;
     box-sizing: border-box;
     padding: 50px;
     text-align: center;
