fix small thumbnail

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -52,6 +52,11 @@
     text-align: center;
 }
 
+.subtextSmall {
+    transform: translateY(-52px) !important;
+    max-width: 268px !important;
+}
+
 .leftButton, .rightButton {
     position: absolute;
     background: grey;
