--- a/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
+++ b/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
@@ -11,6 +11,13 @@
   cursor: pointer;
 }
 
+.whiteBG {
+  background: white;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
 .mobileThumbnail {
   width: 140px;
   height: 90px;
