--- a/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
+++ b/src/components/Pages/GamePage/components/Thumbnails/Thumbnails.module.css
@@ -3,11 +3,15 @@
   justify-content: center;
 }
 
+.mobileContainer {
+  flex-flow: column;
+  width: 100%;
+}
+
 .thumbnail {
   margin: 10px;
   background: lightgray;
   background-position: center;
-  background-size: cover;
   cursor: pointer;
 }
 
@@ -15,12 +19,6 @@
   background: white;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
-}
-
-.mobileThumbnail {
-  width: 140px;
-  height: 90px;
 }
 
 .description {
