chore: fix broken g-drive images

--- a/src/components/Pages/MainPage/components/Header/Header.module.css
+++ b/src/components/Pages/MainPage/components/Header/Header.module.css
@@ -4,7 +4,7 @@
 }
 
 .mobileHeader {
-    background-image: url('https://drive.google.com/uc?id=1XRPHab44WSvpWT-8M2ZHFxMkrM59EUen');
+    background-image: url('https://drive.google.com/thumbnail?id=1XRPHab44WSvpWT-8M2ZHFxMkrM59EUen&sz=w1200');
     background-size: cover;
 }
 
