chore: mobile fallback color

--- a/src/components/Pages/MainPage/components/Header/Header.module.css
+++ b/src/components/Pages/MainPage/components/Header/Header.module.css
@@ -6,6 +6,7 @@
 .mobileHeader {
     background-image: url('https://drive.google.com/thumbnail?id=1XRPHab44WSvpWT-8M2ZHFxMkrM59EUen&sz=w1200');
     background-size: cover;
+    background-color: #B2EDFF;
 }
 
 .titleContainer {
